<resources>
    <string name="app_name">RetrofitTask</string>
    <string name="movie_name">Movie Name</string>
    <string name="movieinfo">MovieInfo</string>
    <string name="country">Country</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="type">Type</string>
    <string name="writer">Writer</string>
    <string name="director">Director</string>
    <string name="actors">Actors</string>
    <string name="awards">Awards</string>
    <string name="language">Language</string>
    <string name="rate">Rate</string>
    <string name="back">Back</string>
</resources>
